<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero" />

    <EditText
        android:id="@+id/editTextNumero"
        android:labelFor="@id/editTextNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/editTextNome" />

    <TextView
        android:id="@+id/textViewTurma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turma" />

    <EditText
        android:id="@+id/editTextTurma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/editTextTurma" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />


</LinearLayout>